feat: CRUD Records
