# BE/swagger.json
@@ -19,6 +19,10 @@
         {
             "name": "Auth",
             "description": "API for authentication in the system"
+        },
+        {
+            "name": "TTV Record",
+            "description": "API for TTV Record in the system"
         }
     ],
     "paths": {
@@ -377,6 +381,246 @@
                     }
                 }
             }
+        },
+        "/records": {
+            "get": {
+                "tags": [
+                    "TTV Record"
+                ],
+                "summary": "Get all TTV Record",
+                "description": "Get all TTV Record in the system",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/TTVRecordResponse"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorSchema400"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "TTV Record"
+                ],
+                "summary": "Create a new TTV Record",
+                "description": "Create a new TTV Record in the system",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "requestBody": {
+                    "description": "TTV Record object that needs to be added to the system",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/TTVRecord"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/TTVRecordResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorSchema400"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/records/{recordId}": {
+            "get": {
+                "tags": [
+                    "TTV Record"
+                ],
+                "summary": "Get a TTV Record",
+                "description": "Get a TTV Record in the system",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "recordId",
+                        "in": "path",
+                        "description": "ID of TTV Record to return",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/examples/TTVRecordId"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/TTVRecordResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorSchema400"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorSchema404"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "TTV Record"
+                ],
+                "summary": "Update a TTV Record",
+                "description": "Update a TTV Record in the system",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "recordId",
+                        "in": "path",
+                        "description": "ID of TTV Record to return",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/examples/TTVRecordId"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "TTV Record object that needs to be added to the system",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/TTVRecord"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/TTVRecordResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "TTV Record"
+                ],
+                "summary": "Delete a TTV Record",
+                "description": "Delete a TTV Record in the system",
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "parameters": [
+                    {
+                        "name": "recordId",
+                        "in": "path",
+                        "description": "ID of TTV Record to return",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/examples/TTVRecordId"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/TTVRecordResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorSchema400"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorSchema404"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -466,6 +710,79 @@
                     }
                 }
             },
+            "TTVRecord": {
+                "type": "object",
+                "properties": {
+                    "adminId": {
+                        "$ref": "#/components/examples/AdminId"
+                    },
+                    "userId": {
+                        "$ref": "#/components/examples/UserId"
+                    },
+                    "date": {
+                        "type": "string",
+                        "example": "2020-01-01T00:00:00.000Z"
+                    },
+                    "bloodPressureSystolic": {
+                        "type": "integer",
+                        "example": 120
+                    },
+                    "bloodPressureDiastolic": {
+                        "type": "integer",
+                        "example": 80
+                    },
+                    "pulse": {
+                        "type": "integer",
+                        "example": 80
+                    },
+                    "breathingRate": {
+                        "type": "integer",
+                        "example": 20
+                    },
+                    "temperature": {
+                        "type": "number",
+                        "example": 36.5
+                    }
+                }
+            },
+            "TTVRecordResponse": {
+                "type": "object",
+                "properties": {
+                    "_id": {
+                        "$ref": "#/components/examples/UserId"
+                    },
+                    "adminId": {
+                        "$ref": "#/components/examples/AdminId"
+                    },
+                    "userId": {
+                        "$ref": "#/components/examples/UserId"
+                    },
+                    "date": {
+                        "type": "string",
+                        "example": "2020-01-01T00:00:00.000Z"
+                    },
+                    "bloodPressureSystolic": {
+                        "type": "integer",
+                        "example": 120
+                    },
+                    "bloodPressureDiastolic": {
+                        "type": "integer",
+                        "example": 80
+                    },
+                    "pulse": {
+                        "type": "integer",
+                        "example": 80
+                    },
+                    "breathingRate": {
+                        "type": "integer",
+                        "example": 20
+                    },
+                    "temperature": {
+                        "type": "number",
+                        "example": 36.5
+                    }
+                }
+            },
             "ErrorSchema400": {
                 "type": "object",
                 "properties": {
@@ -505,6 +822,9 @@
             },
             "AdminPassword": {
                 "example": "password"
+            },
+            "TTVRecordId": {
+                "example": "659d1f0bf171c8fce20a9a44"
             }
         }
     }
